homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  ports:
  - port: 8123
    protocol: TCP
  selector:
    app: homeassistant
